# Katana-splicing-tool

./: .gitignore  .katana_project.yaml  README.md  build.spec  launch_katana.bat  pyproject.toml  tmp_manifest_check.py
app/: main.py  window.py
app/pages/: blacklist_page.py  candidate_gene_page.py  candidate_selection_page.py  cards_page.py  comparison_page.py  comparison_sets_page.py  input_check_page.py  input_paths_dialog.py  isoform_page.py  jutils_page.py  project_page.py  results_page.py  samples_page.py  sashimi_page.py  section_navigation_page.py  settings_page.py  shortlist_page.py  thresholds_page.py  visualization_groups_page.py
configs/: default_thresholds.yaml  environment.yml  launcher_config.yaml
docs/: ACCEPTANCE_REPORT_v1.0.md  AGREED_REQUIREMENTS.md  DISTRIBUTION_PLAN.md  GITHUB_DESCRIPTION.md  GITHUB_RELEASE_BODY_v1.0.md  PACKAGING.md  RELEASE_NOTES_v1.0.md  WINDOWS_RELEASE_CHECKLIST.md
katana_splicing_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_windows.ps1  setup_windows_dev.ps1
software/Jutils/: README.md  convert_results_utils.py  heatmap_pca_mds_utils.py  jutils.py  sashimi_utils.py  test_distance_metrics.sh
software/SUPPA/: README.md  suppa.py
src/: runtime_paths.py
src/adapters/: cards_adapter.py  isoformswitch_adapter.py  isoformswitch_runner.py  jutils_adapter.py  sashimi_adapter.py
src/analysis/: common.py  mechanism_support.py  program_comparison.py  splicing_landscape.py  tx_splicing_integration.py
src/io/: scanner.py  validators.py
src/services/: project_service.py  shortlist_service.py
(+17 files in other folders)
