[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katana-splicing-tool"
version = "0.1.0"
description = "Interactive local RNA splicing and transcriptome integration tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "seaborn>=0.13",
]

[tool.setuptools]
packages = ["app", "app.pages", "app.widgets", "src", "src.analysis", "src.adapters", "src.domain", "src.domain.models", "src.domain.rules", "src.io", "src.io.loaders", "src.services", "src.visualization"]

